@@ -7,32 +7,28 @@ import com.test.teamlog.domain.post.dto.PostResult;
 import com.test.teamlog.domain.post.dto.PostUpdateInput;
 import com.test.teamlog.domain.post.entity.Post;
 import com.test.teamlog.domain.post.repository.PostRepository;
-import com.test.teamlog.domain.postlike.dto.PostLikerResult;
-import com.test.teamlog.domain.postlike.service.PostLikeService;
 import com.test.teamlog.domain.postmedia.dto.PostMediaResult;
 import com.test.teamlog.domain.posttag.entity.PostTag;
 import com.test.teamlog.domain.postupdatehistory.entity.PostUpdateHistory;
-import com.test.teamlog.domain.postupdatehistory.service.PostUpdateHistoryService;
 import com.test.teamlog.domain.project.entity.Project;
+import com.test.teamlog.domain.project.service.query.ProjectQueryService;
+import com.test.teamlog.domain.projectmember.service.query.ProjectMemberQueryService;
 import com.test.teamlog.domain.userfollow.entity.UserFollow;
-import com.test.teamlog.entity.*;
-import com.test.teamlog.exception.ResourceNotFoundException;
+import com.test.teamlog.domain.userfollow.service.query.UserFollowQueryService;
+import com.test.teamlog.domain.postmedia.entity.PostMedia;
+import com.test.teamlog.global.exception.ResourceNotFoundException;
 import com.test.teamlog.global.entity.AccessModifier;
-import com.test.teamlog.payload.ApiResponse;
-import com.test.teamlog.payload.PagedResponse;
-import com.test.teamlog.payload.PostDTO;
-import com.test.teamlog.payload.PostTagInfo;
-import com.test.teamlog.repository.PostMediaRepository;
-import com.test.teamlog.domain.posttag.repository.PostTagRepository;
-import com.test.teamlog.repository.PostUpdateHistoryRepository;
-import com.test.teamlog.service.FileStorageService;
-import com.test.teamlog.domain.project.service.ProjectService;
-import com.test.teamlog.domain.userfollow.service.UserFollowService;
+import com.test.teamlog.global.dto.ApiResponse;
+import com.test.teamlog.global.dto.PagedResponse;
+import com.test.teamlog.domain.postmedia.service.FileStorageService;
 import lombok.RequiredArgsConstructor;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.Point;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
@@ -49,16 +45,12 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class PostService {
-    private final PostUpdateHistoryService postUpdateHistoryService;
-    private final UserFollowService userFollowService;
-    private final FileStorageService fileStorageService;
-    private final ProjectService projectService;
     private final PostRepository postRepository;
-    private final PostTagRepository postTagRepository;
-    private final PostMediaRepository postMediaRepository;
 
-    private final PostLikeService postLikeService;
-    private final PostUpdateHistoryRepository postUpdateHistoryRepository;
+    private final FileStorageService fileStorageService;
+    private final ProjectQueryService projectQueryService;
+    private final UserFollowQueryService userFollowQueryService;
+    private final ProjectMemberQueryService projectMemberQueryService;
 
     public List<PostResult> getPostsByUser(User currentUser) {
         List<PostResult> resultList = new ArrayList<>();
@@ -71,11 +63,11 @@ public class PostService {
     }
 
     public List<PostResult> readAllByFollowingUser(User currentUser) {
-        List<UserFollow> userFollowingList = userFollowService.readAllByUser(currentUser);
+        List<UserFollow> userFollowingList = userFollowQueryService.readAllByFromUser(currentUser);
         if (CollectionUtils.isEmpty(userFollowingList)) return Collections.emptyList();
 
         List<User> userFollowings = userFollowingList.stream().map(UserFollow::getToUser).collect(Collectors.toList());
-        List<Post> posts = postRepository.findAllByWriters(userFollowings);
+        List<Post> posts = postRepository.findAllByWriterIn(userFollowings);
 
         return posts.stream().map(post -> convertToPostResult(post, currentUser)).collect(Collectors.toList());
     }
@@ -87,7 +79,7 @@ public class PostService {
 
         // 비공개일 경우 프로젝트 멤버 권한 체크
         if (post.getAccessModifier() == AccessModifier.PRIVATE) {
-            projectService.validateProjectMember(post.getProject(), currentUser);
+            projectMemberQueryService.isProjectMember(post.getProject(), currentUser);
         }
 
         return convertToPostResult(post, currentUser);
@@ -104,191 +96,25 @@ public class PostService {
                 posts.getTotalPages(), posts.isLast());
     }
 
-    // 프로젝트 내 포스트 조회
-    private PagedResponse<PostResult> searchPostsByProject(Long projectId, Sort.Direction sort, String cop,
-                                                           Long cursor, int size, User currentUser) {
-        Project project = projectService.findOne(projectId);
-        Pageable pageable = PageRequest.of(0, size, sort, "id");
-        Boolean isUserMemberOfProject = projectService.isProjectMember(project, currentUser);
-
-        Slice<Post> posts = null;
-        if (cursor == null) {
-            if (isUserMemberOfProject)
-                posts = postRepository.findAllByProject(project, pageable);
-            else
-                posts = postRepository.findAllByProject(project, AccessModifier.PUBLIC, pageable);
-        } else {
-            if (isUserMemberOfProject)
-                posts = postRepository.findAllByProjectAndCursor(project, cursor, cop, pageable);
-            else
-                posts = postRepository.findAllByProjectAndCursor(project, cursor, cop, AccessModifier.PUBLIC, pageable);
-        }
-
-        List<PostResult> resultList = new ArrayList<>();
-        for (Post post : posts) {
-            resultList.add(convertToPostResult(post, currentUser));
-        }
-
-        long totalElements = 0;
-
-        if (isUserMemberOfProject)
-            totalElements = postRepository.getPostsCount(project);
-        else
-            totalElements = postRepository.getPostsCount(project, AccessModifier.PUBLIC);
-
-        return new PagedResponse<>(resultList, 0, posts.getSize(), totalElements,
-                0, posts.isLast());
-    }
-
-    // 키워드로 게시물 조회
-    private PagedResponse<PostResult> searchPostsInProjectByKeyword(Long projectId,
-                                                                    String keyword,
-                                                                    Sort.Direction sort,
-                                                                    String cop,
-                                                                    Long cursor,
-                                                                    int size,
-                                                                    User currentUser) {
-        Project project = projectService.findOne(projectId);
-
-        Boolean isUserMemberOfProject = projectService.isProjectMember(project, currentUser);
-        Pageable pageable = PageRequest.of(0, size, sort, "id");
-
-        Slice<Post> posts;
-        if (cursor == null) {
-            if (isUserMemberOfProject)
-                posts = postRepository.searchPostsInProject(project, keyword, pageable);
-            else
-                posts = postRepository.searchPostsInProject(project, keyword, AccessModifier.PUBLIC, pageable);
-        } else {
-            if (isUserMemberOfProject)
-                posts = postRepository.searchPostsInProjectByCursor(project, cursor, keyword, cop, pageable);
-            else
-                posts = postRepository.searchPostsInProjectByCursor(project, cursor, keyword, cop, AccessModifier.PUBLIC, pageable);
-        }
-
-        List<PostResult> resultList = new ArrayList<>();
-        for (Post post : posts) {
-            resultList.add(convertToPostResult(post, currentUser));
-        }
-
-        long totalElements;
-        if (isUserMemberOfProject)
-            totalElements = postRepository.getPostsCountByKeyword(project, keyword);
-        else
-            totalElements = postRepository.getPostsCountByKeyword(project, keyword, AccessModifier.PUBLIC);
-
-        return new PagedResponse<>(resultList, 0, posts.getSize(), totalElements,
-                0, posts.isLast());
-    }
-
-    // FIXME: QueryDsl 도입 후 중복 로직을 제거해보자
-    public PagedResponse<PostResult> search(Long projectId, PostReadByProjectInput input, User currentUser) {
+    // 해시태그 선별 조회 + 키워드 검색
+    public PagedResponse<PostResult> search(Long projectId,
+                                            PostReadByProjectInput input,
+                                            User currentUser) {
         input.convertPagingInfo();
 
-        final String keyword = input.getKeyword();
-        final List<String> hashtagList = input.getHashtagList();
-        final Sort.Direction sort = input.getSort();
-        final String comparisonOperator = input.getComparisonOperator();
-        final Long cursor = input.getCursor();
-        final int size = input.getSize();
+        Project project = findProjectById(projectId);
+        input.setProjectId(projectId);
 
-        if (keyword != null && hashtagList != null) {
-            return searchPostsInProjectByHashtagAndKeyword(projectId, keyword, hashtagList, sort, comparisonOperator, cursor, size, currentUser);
-        } else if (keyword != null) {
-            return searchPostsInProjectByKeyword(projectId, keyword, sort, comparisonOperator, cursor, size, currentUser);
-        } else if (hashtagList != null) {
-            return searchPostsInProjectByHashtag(projectId, hashtagList, sort, comparisonOperator, cursor, size, currentUser);
-        } else {
-            return searchPostsByProject(projectId, sort, comparisonOperator, cursor, size, currentUser);
-        }
-    }
+        boolean isUserMemberOfProject = projectMemberQueryService.isProjectMember(project, currentUser);
+        Pageable pageable = PageRequest.of(0, input.getSize(), input.getSort(), "id");
 
-    // 해시태그 선별 조회 + 키워드 검색
-    private PagedResponse<PostResult> searchPostsInProjectByHashtagAndKeyword(Long projectId,
-                                                                              String keyword,
-                                                                              List<String> names,
-                                                                              Sort.Direction sort,
-                                                                              String cop,
-                                                                              Long cursor,
-                                                                              int size,
-                                                                              User currentUser) {
-        Project project = projectService.findOne(projectId);
-        Boolean isUserMemberOfProject = projectService.isProjectMember(project, currentUser);
-        Pageable pageable = PageRequest.of(0, size, sort, "id");
+        input.setAccessModifier(!isUserMemberOfProject ? AccessModifier.PUBLIC : null);
+        final Page<Post> page = postRepository.search(input, pageable);
+        final List<Post> postList = page.getContent();
 
-        Slice<Post> posts = null;
-        if (cursor == null) {
-            if (isUserMemberOfProject)
-                posts = postRepository.searchPostsInProjectByHashtagAndKeyword(project, names, keyword, pageable);
-            else
-                posts = postRepository.searchPublicPostsInProjectByHashtagAndKeyword(project, names, keyword, AccessModifier.PUBLIC, pageable);
-        } else {
-            if (isUserMemberOfProject)
-                posts = postRepository.searchPostsInProjectByHashtagAndKeywordAndCursor(project, cursor, names,
-                        keyword, cop, pageable);
-            else
-                posts = postRepository.searchPublicPostsInProjectByHashtagAndKeywordAndCursor(project, cursor, names,
-                        keyword, cop, AccessModifier.PUBLIC, pageable);
-        }
-        List<PostResult> resultList = new ArrayList<>();
-        for (Post post : posts) {
-            resultList.add(convertToPostResult(post, currentUser));
-        }
-        long totalElements = 0;
-        if (isUserMemberOfProject) {
-            postRepository.getPostsCountByHashtagAndKeyword(project, names, keyword, pageable).getTotalElements();
-        } else {
-            postRepository.getPostsCountByHashtagAndKeyword(project, names, keyword, AccessModifier.PUBLIC, pageable).getTotalElements();
-        }
+        List<PostResult> resultList = postList.stream().map(p -> convertToPostResult(p, currentUser)).collect(Collectors.toList());
 
-        return new PagedResponse<>(resultList, 0, posts.getSize(), totalElements,
-                0, posts.isLast());
-    }
-
-    // 해시태그 선별 조회
-    private PagedResponse<PostResult> searchPostsInProjectByHashtag(Long projectId, List<String> names, Sort.Direction sort,
-                                                                    String cop, Long cursor, int size, User currentUser) {
-        Project project = projectService.findOne(projectId);
-        Pageable pageable = PageRequest.of(0, size, sort, "id");
-        Boolean isUserMemberOfProject = projectService.isProjectMember(project, currentUser);
-
-        Slice<Post> posts = null;
-        if (cursor == null) {
-            if (isUserMemberOfProject)
-                posts = postRepository.getPostsInProjectByHashTag(project, names, pageable);
-            else
-                posts = postRepository.getPostsInProjectByHashTag(project, names, AccessModifier.PUBLIC, pageable);
-        } else {
-            if (isUserMemberOfProject)
-                posts = postRepository.getPostsInProjectByHashTagAndCursor(project, cursor, names, cop, pageable);
-            else
-                posts = postRepository.getPostsInProjectByHashTagAndCursor(project, cursor, names, cop, AccessModifier.PUBLIC, pageable);
-        }
-        List<PostResult> resultList = new ArrayList<>();
-        for (Post post : posts) {
-            resultList.add(convertToPostResult(post, currentUser));
-        }
-        long totalElements = 0;
-        if (isUserMemberOfProject)
-            totalElements = postRepository.getPostsCountByHashTag(project, names, pageable).getTotalElements();
-        else
-            totalElements = postRepository.getPostsCountByHashTag(project, names, AccessModifier.PUBLIC, pageable).getTotalElements();
-
-
-        return new PagedResponse<>(resultList, 0, posts.getSize(), totalElements,
-                0, posts.isLast());
-    }
-
-    // 해시태그 추천
-    public List<String> getRecommendedHashTags(Long id) {
-        Project project = projectService.findOne(id);
-
-        List<PostTagInfo> hashtags = postTagRepository.getRecommendedHashTags(id);
-        List<String> response = new ArrayList<>();
-        for (PostTagInfo tag : hashtags) {
-            response.add(tag.getName());
-        }
-        return response;
+        return new PagedResponse<>(resultList, 0, page.getSize(), page.getTotalElements(), 0, page.isLast());
     }
 
     // 위치정보가 있는 Public 포스트들 조회
@@ -300,14 +126,14 @@ public class PostService {
 
     // 위치정보가 있는 프로젝트의 포스트들 조회
     public List<PostResult> readAllWithLocation(Long projectId, User currentUser) {
-        Project project = projectService.findOne(projectId);
-        Boolean isUserMemberOfProject = projectService.isProjectMember(project, currentUser);
+        Project project = findProjectById(projectId);
+        Boolean isUserMemberOfProject = projectMemberQueryService.isProjectMember(project, currentUser);
 
         List<Post> posts = null;
         if (isUserMemberOfProject)
-            posts = postRepository.findAllPostsWithLocationByProject(project);
+            posts = postRepository.findAllByProjectAndLocationIsNotNull(project);
         else
-            posts = postRepository.findAllPostsWithLocationByProject(project, AccessModifier.PUBLIC);
+            posts = postRepository.findAllByProjectAndAccessModifierAndLocationIsNotNull(project, AccessModifier.PUBLIC);
 
         List<PostResult> resultList = new ArrayList<>();
         for (Post post : posts) {
@@ -317,15 +143,14 @@ public class PostService {
         return resultList;
     }
 
-
     // 포스트 생성
     @Transactional
     public Long create(PostCreateInput input,
                        MultipartFile[] media,
                        MultipartFile[] files,
                        User currentUser) {
-        Project project = projectService.findOne(input.getProjectId());
-        projectService.validateProjectMember(project, currentUser);
+        Project project = findProjectById(input.getProjectId());
+        projectMemberQueryService.isProjectMember(project, currentUser);
 
         input.setLocation(makeLocation(input.getLatitude(), input.getLongitude()));
         Post post = input.toPost(project, currentUser);
@@ -334,16 +159,15 @@ public class PostService {
             final List<PostTag> postTagList
                     = input.getHashtags()
                     .stream().map(hashTag -> PostTag.builder().name(hashTag).build())
-                    .collect(Collectors.toList());
+                    .toList();
             postTagList.forEach(tag -> tag.setPost(post));
         }
 
+        post.addPostUpdateHistory(new PostUpdateHistory(post, currentUser));
         Post newPost = postRepository.save(post);
 
         storeMediaFiles(media, post);
         storeFiles(files, post);
-
-        postUpdateHistoryService.createPostUpdateHistory(currentUser, post);
 
         project.setUpdateTime(LocalDateTime.now());
         return newPost.getId();
@@ -373,7 +197,7 @@ public class PostService {
                        MultipartFile[] files, User currentUser) {
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Post", "id", id));
-        projectService.validateProjectMember(post.getProject(), currentUser);
+        projectMemberQueryService.isProjectMember(post.getProject(), currentUser);
 
         post.update(input.getContents(), input.getAccessModifier(), input.getCommentModifier(), makeLocation(input.getLatitude(), input.getLongitude()), input.getAddress());
 
@@ -383,8 +207,6 @@ public class PostService {
         storeFiles(files, post);
 
         updatePostTagList(input.getHashtags(), post);
-
-        postUpdateHistoryService.createPostUpdateHistory(currentUser, post);
 
         return post.getId();
     }
@@ -435,7 +257,7 @@ public class PostService {
     public ApiResponse delete(Long id, User currentUser) {
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Post", "id", id));
-        projectService.validateProjectMember(post.getProject(), currentUser);
+        projectMemberQueryService.isProjectMember(post.getProject(), currentUser);
 
         fileStorageService.deleteFilesByPost(post);
         postRepository.delete(post);
@@ -447,7 +269,7 @@ public class PostService {
         final PostResult result = PostResult.of(post);
 
         // 해시태그 설정
-        List<PostTag> hashtagList = postTagRepository.findAllByPost(post);
+        List<PostTag> hashtagList = post.getHashtags();
         List<String> hashtagNameList
                 = !CollectionUtils.isEmpty(hashtagList) ?
                 hashtagList.stream().map(PostTag::getName).collect(Collectors.toList()) :
@@ -455,14 +277,16 @@ public class PostService {
         result.setHashtags(hashtagNameList);
 
         // 좋아요 여부 설정
-        Boolean isILikeIt = currentUser != null ? postLikeService.existsByPostAndUser(post, currentUser) : Boolean.FALSE;
+        Boolean isILikeIt = currentUser != null ?
+                postRepository.existsPostLikeByPostAndUser(post.getId(), currentUser.getIdx()) :
+                Boolean.FALSE;
         result.setIsILikeIt(isILikeIt);
 
         // 미디어 정보 설정
         List<PostMediaResult> mediaList = new ArrayList<>();
         List<PostMediaResult> fileList = new ArrayList<>();
 
-        List<PostMedia> postMediaList = postMediaRepository.findAllByPost(post);
+        List<PostMedia> postMediaList = postRepository.findAllPostMediaByPostId(post.getId());
         for (PostMedia postMedia : postMediaList) {
             final PostMediaResult postMediaResult = PostMediaResult.from(postMedia);
 
@@ -481,68 +305,14 @@ public class PostService {
         return result;
     }
 
-    @Transactional
-    public List<PostDTO.PostHistoryInfo> readPostUpdateHistory(Long postId, User currentUser) {
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
-        projectService.validateProjectMember(post.getProject(), currentUser);
-
-        Sort sort = Sort.by(Sort.Direction.ASC, "id");
-        List<PostUpdateHistory> historyList = postUpdateHistoryRepository.findAllByPost(post, sort);
-
-        return historyList.stream().map(PostDTO.PostHistoryInfo::new).collect(Collectors.toList());
-    }
-
-
-    /**
-     * 좋아요
-     *
-     * @param postId
-     * @param currentUser
-     * @return
-     */
-    @Transactional
-    public ApiResponse likePost(Long postId, User currentUser) {
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
-
-        postLikeService.create(post, currentUser);
-        return new ApiResponse(Boolean.TRUE, "포스트 좋아요 성공");
-    }
-
-    /**
-     * 좋아요 취소
-     *
-     * @param postId
-     * @param currentUser
-     * @return
-     */
-    @Transactional
-    public ApiResponse unlikePost(Long postId, User currentUser) {
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
-
-        postLikeService.delete(post, currentUser);
-        return new ApiResponse(Boolean.TRUE, "포스트 좋아요 취소 성공");
-    }
-
-    /**
-     * 게시물 좋아요 목록 조회
-     * @param postId
-     * @return
-     */
-    @Transactional(readOnly = true)
-    public List<PostLikerResult> readPostLikerList(Long postId) {
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
-
-        return postLikeService.readAllByPost(post);
-    }
-
     private String makeFileDownloadUri(PostMedia postMedia, String path) {
         return ServletUriComponentsBuilder.fromCurrentContextPath()
                 .path(path)
                 .path(postMedia.getStoredFileName())
                 .toUriString();
+    }
+
+    private Project findProjectById(Long projectId) {
+        return projectQueryService.findById(projectId).orElseThrow(() -> new ResourceNotFoundException("Project", "ID", projectId));
     }
 }
